--- a/devops/helm/geppetto-stage/templates/dev-ops/dev-ops-service.yaml
+++ b/devops/helm/geppetto-stage/templates/dev-ops/dev-ops-service.yaml
@@ -10,13 +10,13 @@ spec:
     port: 8080
     targetPort: 8080
     nodePort: 30080
-  - name: nexus
-    port: 8081
-    targetPort: 8081
-    nodePort: 30081
-  - name: sonarqube
-    port: 9000
-    targetPort: 9000
-    nodePort: 30900
+  # - name: nexus
+  #   port: 8081
+  #   targetPort: 8081
+  #   nodePort: 30081
+  # - name: sonarqube
+  #   port: 9000
+  #   targetPort: 9000
+  #   nodePort: 30900
   selector:
     app: {{ .Values.app.prefix }}-ops
