--- a/application/services/flowmanager/package.json
+++ b/application/services/flowmanager/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "mongoose": "^5.4.7",
+    "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "typescript": "^3.2.4",
