customconnector name changed

--- a/application/services/customconnectors/Dockerfile
+++ b/application/services/customconnectors/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /fredmanager
-WORKDIR /fredmanager
+COPY . /customconnectors
+WORKDIR /customconnectors
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run prod
