--- a/generator/services/seed/attachment/package.json
+++ b/generator/services/seed/attachment/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "nodegenmanager",
+  "name": "fileuploadmanager",
   "version": "1.0.0",
-  "description": "node generation Manager MicroService",
+  "description": "file upload Manager",
   "main": "dist/server.js",
   "scripts": {
-    "test": "ng test",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "ts-node ./src/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
-  "author": "Mithun <mithun.vikram@10decoders.in>",
-  "license": "ISC",
+  "author": "",
+  "license": "",
   "dependencies": {
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "fs-extra": "^8.1.0",
-    "mkdirp": "^0.5.1",
-    "mongoose": "^5.4.9",
-    "node-async-loop": "^1.2.2",
+    "mime": "^2.4.4",
+    "mongoose": "^5.4.7",
+    "multer": "^1.4.2",
+    "nanoid": "^2.1.1",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
-    "stringtemplate-js": "^0.1.1",
-    "typescript": "^3.3.1",
-    "util": "^0.11.1",
+    "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
   }
