--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -38,6 +38,7 @@
     "angular-validation-message": "^1.1.0",
     "angular-validation-message-i18next": "^1.1.0",
     "bootstrap": "^4.3.1",
+    "bootstrap4-toggle": "^3.5.0",
     "core-js": "^2.5.4",
     "detect-browser": "^4.0.4",
     "express": "^4.16.4",
@@ -51,6 +52,7 @@
     "ng-multiselect-dropdown": "^0.2.3",
     "ng2-file-upload": "^1.3.0",
     "ngx-toastr": "^9.1.2",
+    "ngx-toggle-switch": "^2.0.5",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
     "shortid": "^2.2.14",
