new grapesjs version added

--- a/application/clients/desktop/angular.json
+++ b/application/clients/desktop/angular.json
@@ -29,19 +29,18 @@
             "styles": [
               "node_modules/ag-grid-community/dist/styles/ag-grid.css",
               "node_modules/ag-grid-community/dist/styles/ag-theme-balham.css",
+              "node_modules/grapesjs-preset-webpage/dist/grapesjs-preset-webpage.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               "src/assets/js/feather.js",
               "src/assets/js/toastr.min.js",
               "src/assets/js/ckeditor.js",
-              "src/assets/js/grapes.min.js",
-              "src/assets/js/gjs-grapedrop-preset.js",
               "src/assets/js/editor.js",
               "src/assets/js/analytics.js",
+              "node_modules/grapesjs-preset-webpage/dist/grapesjs-preset-webpage.min.js",
               "src/assets/js/customjs/unsplash.js",
-              "src/assets/js/customjs/assetIcons.js",
-              "src/assets/js/app.js"
+              "src/assets/js/customjs/assetIcons.js"
             ]
           },
           "configurations": {
