--- a/application/services/adminmanager/package.json
+++ b/application/services/adminmanager/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "ng test",
     "build": "tsc",
-    "dev": "ts-node ./src/server.ts",
+    "dev": "name=development ts-node ./src/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
@@ -18,6 +18,7 @@
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.5",
     "csrf-token": "^1.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -29,6 +30,7 @@
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "ts-node": "^8.6.2",
     "typescript": "^3.2.4",
     "url-join": "^4.0.0",
     "uuid": "^3.3.2",
