--- a/application/services/apigateway/package.json
+++ b/application/services/apigateway/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node ./src/server.ts",
+    "dev": "name=development ts-node ./src/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
@@ -16,15 +16,17 @@
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "ts-node": "^8.6.2",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^3.6.0",
-    "jsonwebtoken": "^8.5.1"
+    "winston-daily-rotate-file": "^3.6.0"
   }
 }
