commit for mongoDB environment configuration

--- a/generator/services/generation-manager/.env
+++ b/generator/services/generation-manager/.env
@@ -4,5 +4,6 @@ localgeneratorBaseUrl =  "http://localhost"
 livesystementryBaseUrl = "http://gep-dev-system-entry.gep-dev-201902.svc.cluster.local"
 livegeneratorBaseUrl = "http://gep-dev-generator.gep-dev-201902.svc.cluster.local"
 
+mongoUrl = 'mongodb://127.0.0.1/GeppettoStage'
 
 localname=development
