--- a/application/services/customconnectors/package.json
+++ b/application/services/customconnectors/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "ng test",
     "build": "tsc",
-    "dev": "ts-node ./src/server.ts",
+    "dev": "name=development ts-node ./src/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
@@ -16,6 +16,7 @@
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "mongoose": "^5.4.9",
@@ -23,7 +24,7 @@
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
-    "ts-node": "^8.0.2",
+    "ts-node": "^8.6.2",
     "typescript": "^3.3.1",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
