--- a/generator/services/configurationmanager/package.json
+++ b/generator/services/configurationmanager/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node ./src/server.ts",
+    "dev": "name=development ts-node ./src/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
@@ -17,11 +17,13 @@
     "body-parser": "^1.18.3",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "mongoose": "^5.4.7",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
+    "ts-node": "^8.6.2",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
