--- a/application/clients/desktop/angular.json
+++ b/application/clients/desktop/angular.json
@@ -44,6 +44,14 @@
             ]
           },
           "configurations": {
+            "developement":{
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -78,6 +86,9 @@
           "configurations": {
             "production": {
               "browserTarget": "GeppettoBuilder:build:production"
+            },
+            "dev":{
+              "browserTarget": "GeppettoBuilder:build:developement"
             }
           }
         },
