--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -4,7 +4,7 @@
   "author": "Rahul Tibrewal <rahul.tiberwal@10decoders.in>",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --configuration=dev",
     "test": "ng test",
     "server": "npm run server",
     "lint": "ng lint",
@@ -50,7 +50,6 @@
     "i18next-xhr-backend": "^1.5.1",
     "js-yaml": "^3.13.1",
     "nanoid": "^2.0.1",
-    "ng-multiselect-dropdown": "^0.2.3",
     "ng2-file-upload": "^1.3.0",
     "ngx-toastr": "^9.1.2",
     "ngx-toggle-switch": "^2.0.5",
