--- a/application/services/apigateway/package.json
+++ b/application/services/apigateway/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "multiparty": "^4.2.1",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
