--- a/generator/services/configurationmanager/Dockerfile
+++ b/generator/services/configurationmanager/Dockerfile
@@ -3,4 +3,4 @@ COPY . /configurationmanager
 WORKDIR /configurationmanager
 RUN npm i -g ts-node
 RUN npm install
-CMD npm run prod
+CMD npm run dev
