--- a/generator/services/frontend-gen-manager/Dockerfile
+++ b/generator/services/frontend-gen-manager/Dockerfile
@@ -3,4 +3,4 @@ COPY . /frontend-gen-manager
 WORKDIR /frontend-gen-manager
 RUN npm i -g ts-node
 RUN npm install
-CMD npm run prod
+CMD npm run dev
