--- a/generator/services/infrastructure-manager/Dockerfile
+++ b/generator/services/infrastructure-manager/Dockerfile
@@ -20,4 +20,4 @@ COPY . /infrastructuremanager
 WORKDIR /infrastructuremanager 
 RUN npm install
 RUN npm i -g ts-node
-CMD npm run prod
+CMD npm run dev
