--- a/generator/services/code-gen-manager/Dockerfile
+++ b/generator/services/code-gen-manager/Dockerfile
@@ -3,4 +3,4 @@ COPY . /code-generation-manager
 WORKDIR /code-generation-manager
 RUN npm i -g ts-node
 RUN npm install
-CMD npm run prod
+CMD npm run dev
