--- a/generator/services/ionic-manager/Dockerfile
+++ b/generator/services/ionic-manager/Dockerfile
@@ -6,4 +6,4 @@ RUN npm install -g @angular/cli
 RUN npm install -g cordova ionic
 RUN npm i -g cordova-res --unsafe-perm
 RUN npm i -g ts-node
-CMD npm run prod
+CMD npm run dev
