--- a/generator/services/node-gen-manager/package.json
+++ b/generator/services/node-gen-manager/package.json
@@ -21,6 +21,7 @@
     "fs-extra": "^8.1.0",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.4.9",
+    "ncp": "^2.0.0",
     "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
