--- a/generator/services/backend-gen-manager/package.json
+++ b/generator/services/backend-gen-manager/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "http": "0.0.0",
+    "ncp": "^2.0.0",
     "mongoose": "^5.4.7",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
