--- a/generator/services/infrastructure-manager/Dockerfile
+++ b/generator/services/infrastructure-manager/Dockerfile
@@ -21,3 +21,6 @@ WORKDIR /infrastructuremanager
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run dev
+VOLUME /geppetto/generated-code/
+VOLUME /geppetto/template/
+
