--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ nodegenmanager=http://nodegenmanager
 frontgenmanager=http://frontgenmanager
 angulargenmanager=http://angulargenmanager
 angtemplatemanager=http://angtemplatemanager
+swaggermanager=http://swaggermanager
 githubmanager=http://githubmanager
 authgenmanager=http://authgenmanager
 
