env file generations added

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-mongoUrl=mongodb://mongodb:27017/GeppettoStage
+mongoUrl=mongodb://admin:password@mongo:27017/GeppettoStage?authSource=admin
 localname=development
 localcamundaUrl=http://camundasvc:3008
 localcamundaBaseUrl=http://camunda
