--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ nodegenmanager=http://nodegenmanager
 frontgenmanager=http://frontgenmanager
 angulargenmanager=http://angulargenmanager
 angtemplatemanager=http://angtemplatemanager
-swaggermanager=http://swaggermanager
+swaggergenmanager=http://swaggergenmanager
 githubmanager=http://githubmanager
 authgenmanager=http://authgenmanager
 
