--- a/generator/services/seed/camunda/package.json
+++ b/generator/services/seed/camunda/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.4.9",
     "multer": "^1.4.1",
     "node-async-loop": "^1.2.2",
+    "node-fetch": "^2.3.0",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
