--- a/generator/services/seed/Auth-Proxy/package.json
+++ b/generator/services/seed/Auth-Proxy/package.json
@@ -28,7 +28,6 @@
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
-    "uuid": "^3.3.2",
-    "request": "^2.88.0"
+    "uuid": "^3.3.2"
   }
 }
