--- a/generator/services/seed/securitymanager/package.json
+++ b/generator/services/seed/securitymanager/package.json
@@ -30,7 +30,6 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "node-async-loop": "^1.2.2",
-    "uuid": "^3.3.2",
-    "request": "^2.88.0"
+    "uuid": "^3.3.2"
   }
 }
