changed the docker os to alpine

--- a/application/services/templatemanager/Dockerfile
+++ b/application/services/templatemanager/Dockerfile
@@ -1,7 +1,6 @@
-From node:10.14.2
+FROM node:14.11.0-alpine
 COPY . /templatemanager
 WORKDIR /templatemanager
-Run rm -rf node_modules
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run dev
