--- a/application/services/projectmanager/package.json
+++ b/application/services/projectmanager/package.json
@@ -20,8 +20,11 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "mongoose": "^5.4.7",
+    "nanoid": "^2.0.3",
+    "nanoid-dictionary": "^2.0.0",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
+    "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
