--- a/application/services/screenmanager/package.json
+++ b/application/services/screenmanager/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.4.9",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
+    "ts-node": "^9.0.0",
     "typescript": "^3.3.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
