--- a/application/services/seedmanager/package.json
+++ b/application/services/seedmanager/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.4.7",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
+    "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
