--- a/generator/services/Admin-manager/package.json
+++ b/generator/services/Admin-manager/package.json
@@ -19,13 +19,14 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "stringtemplate-js": "^0.1.1",
     "http": "0.0.0",
     "mongoose": "^5.4.7",
     "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "socket.io": "^2.2.0",
+    "stringtemplate-js": "^0.1.1",
+    "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
