--- a/generator/services/auth-gen-manager/package.json
+++ b/generator/services/auth-gen-manager/package.json
@@ -17,8 +17,8 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "csrf-token": "^1.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "find": "^0.3.0",
@@ -34,6 +34,7 @@
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "stringtemplate-js": "^0.1.1",
+    "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
     "url-join": "^4.0.0",
     "uuid": "^3.3.2",
