--- a/generator/services/backend-gen-manager/package.json
+++ b/generator/services/backend-gen-manager/package.json
@@ -21,11 +21,12 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "http": "0.0.0",
-    "ncp": "^2.0.0",
     "mongoose": "^5.4.7",
+    "ncp": "^2.0.0",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "socket.io": "^2.2.0",
+    "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
