--- a/generator/services/cluster-manager/package.json
+++ b/generator/services/cluster-manager/package.json
@@ -30,6 +30,7 @@
     "request-promise-native": "^1.0.5",
     "simple-git": "^1.107.0",
     "stringtemplate-js": "^0.1.1",
+    "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
