--- a/generator/services/github-manager/package.json
+++ b/generator/services/github-manager/package.json
@@ -22,12 +22,15 @@
     "express-winston": "^3.0.1",
     "mongoose": "^5.4.7",
     "node-vault": "^0.9.5",
+    "nanoid": "^2.0.3",
+    "nanoid-dictionary": "^2.0.0",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "simple-git": "^1.107.0",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.10.2",
     "typescript": "^3.2.4",
+    "uuid": "^8.3.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
   }
