--- a/generator/services/mongo-gen-manager/package.json
+++ b/generator/services/mongo-gen-manager/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^1.18.9",
     "socket.io": "^2.2.0",
     "stringtemplate-js": "^0.1.1",
+    "ts-node": "^9.0.0",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
