--- a/generator/services/node-gen-manager/package.json
+++ b/generator/services/node-gen-manager/package.json
@@ -26,6 +26,7 @@
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "stringtemplate-js": "^0.1.1",
+    "ts-node": "^9.0.0",
     "typescript": "^3.3.1",
     "util": "^0.11.1",
     "winston": "^3.2.1",
