--- a/generator/services/configurationmanager/src/assests/configuration.json
+++ b/generator/services/configurationmanager/src/assests/configuration.json
@@ -2328,8 +2328,16 @@
 			"type": "GpClientLanguage",
 			"sub_type": null
 		},{
-			"name": "angular7",
-			"label": "Angular 7",
+			"name": "angular 10",
+			"label": "Angular 10",
+			"description": null,
+			"value": null,
+			"type": "GpClientDevFramework",
+			"sub_type": null
+		},
+		{
+			"name": "react 16.x(alpha)",
+			"label": "React 16.x(alpha)",
 			"description": null,
 			"value": null,
 			"type": "GpClientDevFramework",
