Fixed the issue of microservices url in apigateway

--- a/.env
+++ b/.env
@@ -39,6 +39,7 @@ angtemplatemanager=http://angtemplatemanager
 swaggergenmanager=http://swaggergenmanager
 githubmanager=http://githubmanager
 authgenmanager=http://authgenmanager
+reactgenmanager=http://reactgenmanager
 
 admingenmanager=http://admingenmanager
 ionicmanager=http://ionicmanager
