--- a/.github/workflows/auto_deployments.yml
+++ b/.github/workflows/auto_deployments.yml
@@ -2,22 +2,15 @@
 
 name: auto_deployements for geppetto dev env
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
 on:
   push:
     branches:
       - feature/ci
-  # push:
-  #   branches: [ main ]
-  # pull_request:
-    # branches: [ main ]
-
+########### Jobs ###########
 jobs:
-  login:
+  login: 
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v2
     - name: Update the apt-get & install the sshpass
       run: sudo apt-get update && sudo apt-get -y install openssh-client && sudo apt-get -y install sshpass 
     - name: Login into the dev instance by using SSH
@@ -27,8 +20,10 @@ jobs:
         privateKey: ${{ secrets.PRIVATE_KEY }}
         command: |
           cd geppettotest
-          ls
-          cd devops/docker-compose/
+          git pull git@github.com:dan-castillo/geppettotest.git
+          cd devops/docker-compose
+          docker-compose down  --rmi all
+          bash geppetto_compose.sh -c
   Upload_S3:
     runs-on: ubuntu-latest
     needs: login
@@ -51,7 +46,7 @@ jobs:
       with:
         args: --acl public-read --delete
       env:
-        AWS_S3_BUCKET: geppetto-demo-delete
+        AWS_S3_BUCKET: geppetto-dev
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
         SOURCE_DIR: "application/clients/desktop/dist/GeppettoBuilder"
