--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "node-sass": "^4.14.1",
     "@angular-devkit/build-angular": "^0.12.4",
     "@angular/animations": "^7.1.4",
     "@angular/cdk": "^7.3.1",
@@ -62,6 +63,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "node-sass": "^4.14.1",
     "@angular-devkit/build-ng-packagr": "~0.11.0",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "^7.2.15",
