--- a/generator/services/Angular-gen-ManagerV10/package.json
+++ b/generator/services/Angular-gen-ManagerV10/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
+    "handlebars": "^4.7.6",
     "mongoose": "^5.4.9",
     "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
