--- a/application/services/Auth-Proxy/package.json
+++ b/application/services/Auth-Proxy/package.json
@@ -22,7 +22,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.7",
+    "mongoose": "~5.4.7",
     "node-fetch": "^2.3.0",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
