--- a/application/services/projectmanager/package.json
+++ b/application/services/projectmanager/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "mongoose": "^5.4.7",
+    "mongoose": "~5.4.7",
     "nanoid": "^2.0.3",
     "nanoid-dictionary": "^2.0.0",
     "node-vault": "^0.9.5",
