--- a/application/services/sharedapplication/package.json
+++ b/application/services/sharedapplication/package.json
@@ -26,7 +26,7 @@
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.4.7",
+    "mongoose": "~5.4.7",
     "multer": "^1.4.2",
     "node-async-loop": "^1.2.2",
     "node-fetch": "^2.3.0",
