--- a/generator/services/Admin-manager/package.json
+++ b/generator/services/Admin-manager/package.json
@@ -20,7 +20,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "http": "0.0.0",
-    "mongoose": "^5.4.7",
+    "mongoose": "~5.4.7",
     "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
