--- a/generator/services/github-manager/package.json
+++ b/generator/services/github-manager/package.json
@@ -20,10 +20,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "mongoose": "^5.4.7",
-    "node-vault": "^0.9.5",
+    "mongoose": "~5.4.7",
     "nanoid": "^2.0.3",
     "nanoid-dictionary": "^2.0.0",
+    "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
