--- a/generator/services/seed/Auth-Proxy/package.json
+++ b/generator/services/seed/Auth-Proxy/package.json
@@ -20,7 +20,7 @@
     "csrf-token": "^1.1.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "mongoose": "^5.4.7",
+    "mongoose": "~5.4.7",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.9",
     "typescript": "^3.2.4",
