--- a/generator/services/seed/attachment/package.json
+++ b/generator/services/seed/attachment/package.json
@@ -19,7 +19,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "mime": "^2.4.4",
-    "mongoose": "^5.4.7",
+    "mongoose": "~5.4.7",
     "multer": "^1.4.2",
     "nanoid": "^2.1.1",
     "node-vault": "^0.9.5",
