--- a/generator/services/sourcecontrolmanager/package.json
+++ b/generator/services/sourcecontrolmanager/package.json
@@ -19,7 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "mongoose": "^5.4.7",
+    "mongoose": "~5.4.7",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
