--- a/generator/services/node-gen-manager/package.json
+++ b/generator/services/node-gen-manager/package.json
@@ -20,7 +20,7 @@
     "express-winston": "^3.0.1",
     "fs-extra": "^8.1.0",
     "mkdirp": "^0.5.1",
-    "mongoose": "^5.4.9",
+   "mongoose": "~5.4.9",
     "ncp": "^2.0.0",
     "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
