--- a/generator/services/seed/camunda/package.json
+++ b/generator/services/seed/camunda/package.json
@@ -19,7 +19,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "form-data": "^2.5.0",
-    "mongoose": "^5.4.9",
+   "mongoose": "~5.4.9",
     "multer": "^1.4.1",
     "node-async-loop": "^1.2.2",
     "node-fetch": "^2.3.0",
