--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/app-db-deployment.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/app-db-deployment.yaml
@@ -1,10 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.app.prefix }}-app-db
   namespace: {{ .Values.app.namespace }}
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: {{ .Values.app.prefix }}-app-db
   template:
     metadata:
       labels:
