--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-service.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    name: {{ .Values.app.prefix }}-system-entry
   name: {{ .Values.app.prefix }}-system-entry
   namespace: {{ .Values.app.namespace }}
 spec:
@@ -14,4 +16,4 @@ spec:
     targetPort: {{ .Values.service.apigateway.targetPort }}
     nodePort: {{ .Values.service.apigateway.nodePort }}
   selector:
-    app: {{ .Values.app.prefix }}-system-entry
+    name: {{ .Values.app.prefix }}-system-entry
