--- a/generator/services/infrastructure-manager/template/deployment/local/helm/static_contents/templates/camunda-pod/camunda-service.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/local/helm/static_contents/templates/camunda-pod/camunda-service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    name: {{ .Values.app.prefix }}-camunda-pod
   name: {{ .Values.app.prefix }}-camunda-pod
   namespace: {{ .Values.app.namespace }}
 spec:
@@ -10,4 +12,4 @@ spec:
     port: 8080
     targetPort: 8080
   selector:
-    app: {{ .Values.app.prefix }}-camunda-pod
+    name: {{ .Values.app.prefix }}-camunda-pod
