--- a/.github/workflows/auto_deployments.yml
+++ b/.github/workflows/auto_deployments.yml
@@ -24,6 +24,19 @@ jobs:
           cd devops/docker-compose
           docker-compose down  --rmi all
           bash geppetto_compose.sh -c
+    - name: aws configuration
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.NEW_ACCESS}}
+        aws-secret-access-key: ${{ secrets.NEW_SECRET }}
+        aws-region: us-east-1
+    - name: Instance Variable
+      run: echo "::set-output name=SELECTED_COLOR::$(aws ec2 describe-instances --instance-ids i-082c02e8aa3853a62 | jq '.Reservations[].Instances[].State.Name')"
+      id: ec2
+    - name: Check the ec2 instance is state
+      run: |
+          echo ${{ steps.ec2.outputs.SELECTED_COLOR }}       
+
   Upload_S3:
     runs-on: ubuntu-latest
     needs: login
