--- a/.github/workflows/auto_deployments.yml
+++ b/.github/workflows/auto_deployments.yml
@@ -166,7 +166,7 @@ jobs:
             continue
           elif [[ $directory == generator/services/Admin-manager/* ]]; then
             echo "::set-output name=backend::commited"
-            echo "::set-output name=admingenmanager::admingenmanger" 
+            echo "::set-output name=admingenmanager::admingenmanager" 
             continue
           elif [[ $directory == generator/services/node-gen-manager/* ]]; then
             echo "::set-output name=backend::commited"
